welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:11: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
    		if(Color.green)
                         ^